<resources>
    <string name="app_name">MediConecta</string>
    <string name="tagline">Tu salud, siempre contigo</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register_question">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="home">Inicio</string>
    <string name="appointments">Citas</string>
    <string name="history">Historial</string>
    <string name="medications">Medicamentos</string>
    <string name="maps">Mapas</string>
    <string name="profile">Mi Perfil</string>
    <string name="save">Guardar cambios</string>
    <string name="cancel">Cancelar</string>
    <string name="route">Cómo llegar</string>
    <string name="call">Llamar</string>
    <string name="logout">Cerrar sesión</string>
</resources>
